# resource-composition

./: .gitignore  package-lock.json  package.json
goodmap/: Cargo.toml  goodmap.wasm
goodmap/src/: bindings.rs  lib.rs
resource-map/: Cargo.toml  index.js  resource_map.wasm
resource-map/resource_map/: resource_map.core.wasm  resource_map.core2.wasm  resource_map.d.ts  resource_map.js
resource-map/resource_map/interfaces/: macovedj-resource-map-resource-map.d.ts  wasi-filesystem-types.d.ts
resource-map/src/: bindings.rs  lib.rs
resource-map/wit/: world.wit
shapes/: global.wit  shapes.wasm  wit.toml
sorter/: Cargo.toml  foo  index.js  sort.wac  sorter.wasm  sorter.wat
sorter/fullsort/: fullsort.core.wasm  fullsort.core3.wasm  fullsort.d.ts  fullsort.js
sorter/fullsort/interfaces/: sorter.d.ts  wasi-filesystem-types.d.ts
sorter/sorter/: sorter.d.ts  sorter.js
sorter/sorter/interfaces/: macovedj-shapes-goodmap.d.ts  macovedj-shapes-sorter.d.ts
sorter/src/: bindings.rs  lib.rs
